create city dynamic template

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div 
+      class="weather-slider" 
+      data-slider="true"
+      data-slideCls="weather-city"
+    ></div>
   </body>
 </html>
