--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
   </head>
 
   <body>
-    <div 
-      class="weather-slider" 
-      data-slider="true"
-      data-slideCls="weather-city"
-    ></div>
+    <header>
+      <h1 class="title">This is a weather widget</h1>
+    </header>
+    <main>
+      <div 
+        id="weather-slider" 
+        data-slider="true"
+        data-slide-target=".weather-city"
+        data-cities="London, Milan, Bangkok, Los Angeles, Nairobi"
+      ></div>
+    </main>
   </body>
 </html>
