slider gestures and events

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,12 @@
 
   <body>
     <header>
-      <h1 class="title">This is a weather widget</h1>
+      <!-- <h1 class="title">This is a weather widget</h1> -->
     </header>
     <main>
       <div 
         id="weather-slider" 
         data-slider="true"
-        data-slide-target=".weather-city"
         data-cities="London, Milan, Bangkok, Los Angeles, Nairobi"
       ></div>
     </main>
