devicemotion event and variables styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Weather Widget</title>
-  </head>
-
-  <body>
+</head>
+<body>
     <main>
-      <div 
-        id="weather-slider" 
-        data-slider="true"
-        data-cities="London, Milan, Bangkok, Los Angeles, Nairobi"
-      ></div>
+        <div id="weather-slider" data-slider="true" data-cities="London, Milan, Bangkok, Los Angeles, Nairobi"></div>
     </main>
-  </body>
+</body>
 </html>
