Improved UI/UX & Minor Fixes

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <title>Weather Widget</title>
 </head>
 <body>
+    <div id="loader"></div>
     <main>
-        <div id="weather-slider" data-slider="true" data-cities="London, Milan, Bangkok, Los Angeles, Nairobi"></div>
+        <div id="weather-slider" data-slider="true" data-cities="London, Milan, Bangkok, Los Angeles, Cape Town, Sidney"></div>
     </main>
 </body>
 </html>
